<resources>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_name">FFF Elite Pass Bundles Emotes Gun Skins for Entertainment</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="appsflyer">jRFSq8vCzCPdaxkTuJNdo5</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_button_default_text" />
    <string name="close_button_type_face">Helvetica</string>
    <string name="com_mopub_nativeads_sponsored_by">Sponsored by %s</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="customAds">https://375.live.qureka.com</string>
    <string name="date_format_month_day">EEEE, MMMM d</string>
    <string name="date_format_year_month_day">EEEE, MMMM d yyyy</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="desc_1">Diamond Spin Event is a unique event in Free Fire which can be compared to a slot machine. Players have to roll and if they score more two same images, some lucrative rewards are offered at random. If a lucky player manages to spin three same images at a time, they are rewarded with a whopping prize of 10,000 diamonds.&lt;a href=https://bit.ly/3pfCwK7>Visit Here !!! :&lt;/a></string>
    <string name="desc_2">&lt;a href=https://bit.ly/3pfCwK7>Visit Here !!! :&lt;/a>Free Fire is not banned in India and users are just facing some sort of server issue or game bug. The error will be quickly fixed once the developer teams get to know about it and may take a few hours to fix it</string>
    <string name="desc_3">&lt;a href=https://bit.ly/3pfCwK7>Visit Here !!! :&lt;/a>According to IGN, the game known as Pubg may have copied the ideas of the famous and viralized Free Fire. Some players were so outraged by this tragedy that they decided to petition the pubg developer to pay back the money from whoever bought the game.</string>
    <string name="desc_4">The size of the Free Fire OB26 update for most of the Android devices is around 644 MB, though some devices reported the update size to be 390 MB. For iOs devices, the file size is about 800 MB.&lt;a href=https://bit.ly/3pfCwK7>Visit Here !!! :&lt;/a></string>
    <string name="desc_5">PUBG Mobile India has been banned by the Indian Government ever since September 2, 2020. ... PUBG game is still banned in India under Section 69A of the Information &lt;a href=https://bit.ly/3pfCwK7>Visit Here !!! :&lt;/a></string>
    <string name="desc_6">&lt;a href=https://bit.ly/3pfCwK7>Visit Here !!! :&lt;/a>Steps on how to hack free fire to get 50000 Diamonds: First of all players need to visit the website. ... Enter Google Play or Facebook username. Choose the platform that you play on, i.e Android or iOS. Choose the number of diamonds that you need. Then click on Generate.</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="empty" />
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_to_get_more">Failed to load more.</string>
    <string name="failed_to_load">Failed to load.</string>
    <string name="failed_to_refresh">Failed to refresh.</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fiverocks_app_id" />
    <string name="fiverocks_app_key" />
    <string name="get_started">GET STARTED</string>
    <string name="getting_more">Loading more…</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="just_before">Just before</string>
    <string name="launch_app">Launch App</string>
    <string name="loading">Loading..</string>
    <string name="main_menu">Main Menu</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mcv2_back_button_desc">Back</string>
    <string name="mcv2_cc_is_off">Subtitle is off. Click to show it.</string>
    <string name="mcv2_cc_is_on">Subtitle is on. Click to hide it.</string>
    <string name="mcv2_error_dialog_button">OK</string>
    <string name="mcv2_ffwd_button_desc">Go forward by 30 seconds</string>
    <string name="mcv2_full_screen_button_desc">Full screen</string>
    <string name="mcv2_launch_button_desc">Launch Link</string>
    <string name="mcv2_music_artist_unknown_text">Artist unknown</string>
    <string name="mcv2_music_title_unknown_text">Song title unknown</string>
    <string name="mcv2_next_button_desc">Next media</string>
    <string name="mcv2_non_music_title_unknown_text">Video title unknown</string>
    <string name="mcv2_overflow_left_button_desc">Back to previous button list</string>
    <string name="mcv2_overflow_right_button_desc">See more buttons</string>
    <string name="mcv2_pause_button_desc">Pause</string>
    <string name="mcv2_play_button_desc">Play</string>
    <string name="mcv2_playback_error_text">"Couldn't play the item you requested"</string>
    <string name="mcv2_previous_button_desc">Previous media</string>
    <string name="mcv2_replay_button_desc">Replay</string>
    <string name="mcv2_rewind_button_desc">Rewind by 10 seconds</string>
    <string name="mcv2_seek_bar_desc">Playback progress</string>
    <string name="mcv2_settings_button_desc">Settings</string>
    <string name="mcv2_video_quality_button_desc">Video Quality Selection</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="title_1">How much MB is free fire?</string>
    <string name="title_2">Is free fire getting banned?</string>
    <string name="title_3">Is Freefire copy of PUBG?</string>
    <string name="title_4">How much MB is free fire?</string>
    <string name="title_5">Is PUBG banned in India?</string>
    <string name="title_6">How do you get 50000 diamonds in a free fire?</string>
</resources>