<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/top" android:background="@color/blue_100" android:layout_width="fill_parent" android:layout_height="70.0dip">
        <ImageView android:id="@id/customAds9" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/ic_1" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" android:layout_alignParentStart="true" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/app_name" android:shadowColor="@color/black" android:shadowDx="-2.0" android:shadowDy="-2.0" android:shadowRadius="5.0" android:layout_centerInParent="true" />
        <ImageView android:id="@id/customAds10" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/ic_2" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/myBanner" android:layout_below="@id/top">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/customAds" android:layout_width="fill_parent" android:layout_height="90.0dip">
                <LinearLayout android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@id/customAds3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_3" android:scaleType="fitXY" android:layout_weight="1.0" />
                    <ImageView android:id="@id/customAds4" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_4" android:scaleType="fitXY" android:layout_weight="1.0" />
                    <ImageView android:id="@id/customAds5" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_5" android:scaleType="fitXY" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/customAds2" android:layout_width="fill_parent" android:layout_height="90.0dip" android:layout_below="@id/customAds">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                    <ImageView android:id="@id/customAds6" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_6" android:scaleType="fitXY" android:layout_weight="1.0" />
                    <ImageView android:id="@id/customAds7" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_7" android:scaleType="fitXY" android:layout_weight="1.0" />
                    <ImageView android:id="@id/customAds8" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_8" android:scaleType="fitXY" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
            <include android:id="@id/ad_lay" android:visibility="gone" layout="@layout/native_ad_list_item" />
            <View android:id="@id/separate" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/customAds2" />
            <RelativeLayout android:id="@id/native_banner_view" android:layout_width="fill_parent" android:layout_height="70.0dip" android:layout_below="@id/separate" />
            <View android:id="@id/separate2" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/native_banner_view" />
            <LinearLayout android:orientation="vertical" android:id="@id/titles" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_below="@id/separate2">
                <LinearLayout android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_title_1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
                        <ImageView android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/ic_one" android:scaleType="fitXY" />
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="marquee" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_1" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_title_2" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
                        <ImageView android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/ic_two" android:scaleType="fitXY" />
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="marquee" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_2" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_title_3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
                        <ImageView android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/ic_three" android:scaleType="fitXY" />
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="marquee" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_3" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/titles2" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_below="@id/titles">
                <LinearLayout android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_title_4" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
                        <ImageView android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/ic_four" android:scaleType="fitXY" />
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="marquee" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_4" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_title_5" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
                        <ImageView android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/ic_five" android:scaleType="fitXY" />
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="marquee" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_5" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_title_6" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
                        <ImageView android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/ic_six" android:scaleType="fitXY" />
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="marquee" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_6" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/idCourseRV" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/titles2" />
        </RelativeLayout>
    </ScrollView>
    <View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="3.0dip" android:layout_above="@id/myBanner" />
    <RelativeLayout android:id="@id/myBanner" android:layout_width="wrap_content" android:layout_height="@dimen/banner_height" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/loadingScreen" android:background="#1bffffff" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:background="#92000000" android:layout_width="fill_parent" android:layout_height="300.0dip" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="120.0dip" android:layout_alignParentBottom="true">
            <ProgressBar android:id="@id/progressBar" android:layout_width="120.0dip" android:layout_height="120.0dip" android:indeterminate="true" android:layout_centerInParent="true" />
            <TextView android:textSize="25.0sp" android:textStyle="bold|italic" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/loading" android:layout_below="@id/progressBar" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>